--- a/environment.yaml
+++ b/environment.yaml
@@ -14,8 +14,8 @@ dependencies:
   - attmap=0.13.2=pyhd8ed1ab_0
   - attrs=23.2.0=pyh71513ae_0
   - boto=2.49.0=py_0
-  - boto3=1.34.57=pyhd8ed1ab_0
-  - botocore=1.34.57=pyge310_1234567_0
+  - boto3=1.34.59=pyhd8ed1ab_0
+  - botocore=1.34.59=pyge310_1234567_1
   - brotli-python=1.1.0=py312h30efb56_1
   - bz2file=0.98=py_0
   - bzip2=1.0.8=hd590300_5
@@ -45,13 +45,13 @@ dependencies:
   - gitdb=4.0.11=pyhd8ed1ab_0
   - gitpython=3.1.42=pyhd8ed1ab_0
   - google-api-core=2.17.1=pyhd8ed1ab_0
-  - google-auth=2.28.1=pyhca7485f_0
+  - google-auth=2.28.2=pyhca7485f_0
   - google-cloud-core=2.4.1=pyhd8ed1ab_0
   - google-cloud-storage=2.14.0=pyhca7485f_0
   - google-crc32c=1.1.2=py312h775cd15_5
   - google-resumable-media=2.7.0=pyhd8ed1ab_0
-  - googleapis-common-protos=1.62.0=pyhd8ed1ab_0
-  - grpcio=1.62.0=py312hb06c811_0
+  - googleapis-common-protos=1.63.0=pyhd8ed1ab_0
+  - grpcio=1.62.1=py312hb06c811_0
   - humanfriendly=10.0=pyhd8ed1ab_6
   - idna=3.6=pyhd8ed1ab_0
   - immutables=0.20=py312h98912ed_1
@@ -73,7 +73,7 @@ dependencies:
   - libgfortran-ng=13.2.0=h69a702a_5
   - libgfortran5=13.2.0=ha4646dd_5
   - libgomp=13.2.0=h807b86a_5
-  - libgrpc=1.62.0=h15f2491_0
+  - libgrpc=1.62.1=h15f2491_0
   - liblapack=3.9.0=21_linux64_openblas
   - liblapacke=3.9.0=21_linux64_openblas
   - libnsl=2.0.1=hd590300_0
@@ -94,7 +94,7 @@ dependencies:
   - ncurses=6.4=h59595ed_2
   - numpy=1.26.4=py312heda63a1_0
   - openssl=3.2.1=hd590300_0
-  - packaging=23.2=pyhd8ed1ab_0
+  - packaging=24.0=pyhd8ed1ab_0
   - pandas=2.2.1=py312hfb8ada1_0
   - peppy=0.40.1=pyhd8ed1ab_0
   - pip=24.0=pyhd8ed1ab_0
@@ -112,7 +112,7 @@ dependencies:
   - pyopenssl=24.0.0=pyhd8ed1ab_0
   - pyparsing=3.1.2=pyhd8ed1ab_0
   - pysocks=1.7.1=pyha2e5f31_6
-  - pytest=8.0.2=pyhd8ed1ab_0
+  - pytest=8.1.1=pyhd8ed1ab_0
   - python=3.12.2=hab00c5b_0_cpython
   - python-dateutil=2.9.0=pyhd8ed1ab_0
   - python-fastjsonschema=2.19.1=pyhd8ed1ab_0
@@ -136,12 +136,12 @@ dependencies:
   - slack_sdk=3.27.1=hd8ed1ab_0
   - smart_open=3.0.0=pyh9f0ad1d_0
   - smmap=5.0.0=pyhd8ed1ab_0
-  - snakemake=8.5.4=hdfd78af_0
+  - snakemake=8.5.5=hdfd78af_0
   - snakemake-interface-common=1.17.1=pyhdfd78af_0
   - snakemake-interface-executor-plugins=8.2.0=pyhdfd78af_0
   - snakemake-interface-report-plugins=1.0.0=pyhdfd78af_0
   - snakemake-interface-storage-plugins=3.1.1=pyhdfd78af_0
-  - snakemake-minimal=8.5.4=pyhdfd78af_0
+  - snakemake-minimal=8.5.5=pyhdfd78af_0
   - stopit=1.1.2=py_0
   - tabulate=0.9.0=pyhd8ed1ab_1
   - throttler=1.2.2=pyhd8ed1ab_0
@@ -161,3 +161,6 @@ dependencies:
   - yarl=1.9.4=py312h98912ed_0
   - yte=1.5.4=pyha770c72_0
   - zipp=3.17.0=pyhd8ed1ab_0
+  - pip:
+      - snakemake-executor-plugin-slurm==0.4.1
+      - snakemake-executor-plugin-slurm-jobstep==0.1.10
